name:                network-banana
version:             0.1.0.0
synopsis:            Network programming with reactive banana.
description:         Network programming with reactive banana.
homepage:            https://github.com/tz70s/network-banana#readme
license:             MIT
license-file:        LICENSE
author:              Tzu-Chiao Yeh 
maintainer:          su3g4284zo6y7@gmail.com
copyright:           2019 Tzu-Chiao Yeh
category:            Network Programming
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable network-banana
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , network
                     , text
                     , bytestring
                     , reactive-banana
